# autotest_platform

./: .gitignore  README.md  pyproject.toml  report.html  requirements.txt
Exceldata/: zhiyouji_test_cases.xlsx
allure-results/: 0039750d-ccb6-44c7-ac6c-3d6cfac63aad-container.json  00fbac49-d8fb-4fbf-a5b2-f47f42c1a20e-container.json  0143b9b2-918a-4030-898e-15fdd0a6d7a1-container.json  019c316e-5043-4d92-b6a3-3ed0a048b0d4-container.json  02a4d8f7-c39f-4dbe-b1b7-fb0d3b1fc656-container.json  031305b5-1d3b-4cbf-8019-945b885c581f-container.json  0355ea66-a53b-4f57-be18-2d410d0c46d5-container.json  03fcb997-e037-440c-bb9b-c07c610fc7ea-result.json  0513b31c-8614-465f-9a80-9c3d6b52971d-container.json  05a31170-6340-4c33-96a5-67ee971411eb-container.json  05dc0c97-9bef-4c3f-b958-4d372b25d288-container.json  062cbcc1-0aa2-41d8-8871-9e8e8e6d3cb8-container.json  06af3cc2-6979-47f5-9094-63d7a58412fe-result.json  06eb5a98-02fe-4be7-b629-c6b1a8d4f8ff-container.json  076bdc51-f229-453e-9aed-d875349cae7b-container.json  07dca004-b7ab-4e20-a681-811a411c2f40-container.json  088876b5-b685-480e-a585-4eaa3d1bb5ab-container.json  0927d2c1-5de1-446b-8332-0961dc782f85-container.json  098657f8-be45-4a6a-a8f6-2629d57c2d8e-container.json  09ffd551-0224-4253-95d7-cc08110d1e65-container.json  0a5b8872-435f-41bc-ae97-55297b801412-container.json  0b5238da-d296-4436-aee2-8f6bfada80d2-container.json  0bf18dfd-f553-4fab-82f5-d079e2ac5fad-container.json  0c0ddfb1-bb8a-4187-8c82-54b2504f3426-result.json  0c2abc0f-31b9-4bf4-8ffe-4c6a7cba72a9-container.json  0c6965ae-6fdb-46b1-ad94-028b6a5a200c-container.json  0c7ec802-9068-44e8-af7b-5f8dced732c5-result.json  0c8c4c99-7f9f-4b03-b4d5-caaacbc882fe-container.json  0d2f3d49-2d16-4e70-85e6-ddf6c1c83f36-container.json  0d68a079-5b30-4be8-aa58-1b0f80408837-container.json  0e6bd271-4388-4211-aa59-b09e414b99c6-container.json  0fe8eb52-e340-4f4a-b518-e55ff5104567-result.json  10be3552-7e94-44f3-b959-7cc0d82ce6da-container.json  10cd462a-cdc8-494e-8ef4-c3fb1c3ade8a-container.json  (+527 more)
(+12 files in other folders)
